--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 </head>
 <body>
+    <div class="smallModal"><p>sorry! no shooting ducks on mobile! The gun follows your mouse cursor, so desktop only for this one </p></div>
     <div class="playerIndicator">
         <img src="images/barrel-one.png" class="left" alt="player one sign">
         <img src="images/player1Turn.png" class="left playerOne">
